@@ -14,6 +14,7 @@
   * Bugfix setActiveItem-method in CarouselView: Paginator didn't update
   * Updated d8 to v0.4.0
   * Updated underscore.js to v1.4.4
+  * add css3-animation M.LabelView
 
 ** Version 1.3 - Date 07.12.2012 **
   * Add valueBinding to selectionListView
